# countpauper

./: .gitignore  .gitmodules  .runsettings  README.md
Angel/: Angel.bnf  Angel.sln  CMakeLists.txt  ReadMe.md  main.cpp  prettyprint.py
Angel/Angel/: Angel.cpp  Angel.vcxproj  Angel.vcxproj.filters  main.cpp  stdafx.cpp
Angel/Design/: Interpreter Design,md  Interpreter.puml  Language Design.md  Logic.mdj  Logic.puml  TODO.md  TODO.txt
Angel/Engine/: Angel.bnf  CMakeLists.txt  Defaults.cpp  Interpret.cpp  Interpreter.cpp  Process.cpp
Angel/Engine/include/: Process.h
Angel/Engine/unittests/: CMakeLists.txt  Interpretation.cpp  ProcessTest.cpp  TestDefaults.cpp  TestInterpretation.cpp
Angel/Interpreter/: CMakeLists.txt  Error.cpp  Grammar.cpp  GrammarGenerator.cpp  Lexer.cpp  Lexicon.cpp  Parser.cpp  RecursivDescenterParser.cpp  Rule.cpp  Source.cpp  SourceSpan.cpp  Symbol.cpp  Syntax.cpp  Terms.cpp  TokenStream.cpp  Tokens.cpp  Utils.cpp
Angel/Interpreter/unittests/: BNF.cpp  CMakeLists.txt  Grammar.cpp  GrammarGenerator.cpp  LLParser.cpp  Lexer.cpp  RecursiveDescentParser.cpp  Source.cpp  Syntax.cpp  Terms.cpp  TestBNF.cpp  TestGrammar.cpp  TestLLParser.cpp  TestLexer.cpp  TestRecursiveDescentParser.cpp  TestSource.cpp  TestTerms.cpp  TestUtils.cpp  Tokens.cpp
Angel/Logic/: All.cpp  AllTrue.h  Array.cpp  Array.h  Association.cpp  Boolean.cpp  Boolean.h  CMakeLists.txt  Clause.cpp  Clause.h  Collection.cpp  Collection.h  Comparisson.cpp  Conjunction.cpp  Conjunction.h  Container.cpp  ContainerImpl.cpp  ContainerImpl.h  ContainerIterator.cpp  Disjunction.cpp  Disjunction.h  Division.cpp  Element.cpp  Element.h  Equation.cpp  Exclusion.cpp  Exponentiation.cpp  Expression.cpp  Expression.h  ExpressionCompare.cpp  ExpressionMakeOperation.cpp  ExpressionOrder.cpp  Function.cpp  GenericOperation.cpp  Id.cpp  Id.h  Individual.cpp  Integer.cpp  Integer.h  Item.cpp  (+37 more)
Angel/Logic/unittests/: CMakeLists.txt  Clause.cpp  Computation.cpp  Element.cpp  Knowledge.cpp  List.cpp  Predicate.cpp  Sequence.cpp  Set.cpp  TestAll.cpp  TestAssociation.cpp  TestBoolean.cpp  TestClause.cpp  TestComputation.cpp  TestConjunction.cpp  TestDisjunction.cpp  TestDivision.cpp  TestElement.cpp  TestEquation.cpp  TestExclusion.cpp  TestExponentiation.cpp  TestExpression.cpp  TestFunction.cpp  TestFunctional.cpp  TestId.cpp  TestInteger.cpp  TestItem.cpp  TestKnowledge.cpp  TestList.cpp  TestLogarithm.cpp  TestMultiplication.cpp  TestNegation.cpp  TestNegative.cpp  TestOperator.cpp  TestOrdering.cpp  TestPredicate.cpp  TestReal.cpp  TestSet.cpp  TestString.cpp  TestSubtraction.cpp  (+4 more)
Angel/Parser/: BNF.cpp  BNF.h  CMakeLists.txt  Error.cpp  Errors.h  Grammar.cpp  GrammarGenerator.cpp  Interpreter.h  Lexer.cpp  Lexicon.cpp  LogicParser.cpp  LogicParser.h  Match.h  Parser.cpp  Parser.h  Parser.vcxproj  Parser.vcxproj.filters  RecursivDescenterParser.cpp  Rule.cpp  Source.cpp  SourceSpan.cpp  StringEncoding.cpp  Symbol.cpp  Syntax.cpp  Syntax.h  Syntax.txt  Terms.cpp  TokenStream.cpp  Use Cases.txt  Utils.cpp  stdafx.cpp  stdafx.h
Angel/Parser/unittests/: BNF.cpp  CMakeLists.txt  Clause.cpp  Element.cpp  Parser.cpp  RangerMatcher.h  Sequence.cpp  TestBNF.cpp  TestGrammar.cpp  TestLLParser.cpp  TestLexer.cpp  TestRecursiveDescentParser.cpp  TestSource.cpp  TestSyntax.cpp  TestTerms.cpp  TestUtils.cpp
Angel/TestLogic/: Clause.cpp  Computation.cpp  Element.cpp  Knowledge.cpp  Predicate.cpp  Sequence.cpp  Set.cpp  TestLogic.vcxproj  TestSolver.cpp  packages.config
Angel/TestParser/: BNF.cpp  Clause.cpp  Element.cpp  Encoding.cpp  Parser.cpp  Sequence.cpp  Set.cpp  TestParser.cpp  TestParser.vcxproj
Derp/: Derp.sln
Tactics/Engine/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  CMakeLists.txt  CSV.h  Callback.h  Camera.cpp  Camera.h  Clone.h  Color.cpp  Color.h  Coordinate.cpp  Coordinate.h  Debug.cpp  Debug.h  Drawing.cpp  Drawing.h  Effect.cpp  Effect.h  Engine.vcxproj  Engine.vcxproj.filters  Error.cpp  GLutil.h  GTestGeometry.h  Geometry.cpp  Geometry.h  GlUtil.cpp  IRendition.h  Identification.cpp  Identification.h  Image.cpp  Image.h  Light.cpp  Light.h  Line.cpp  Line.h  Math.cpp  Math.h  Maths.cpp  Maths.h  Matrix.cpp  (+31 more)
Tactics/Engine/doc/: geometry.uml
Tactics/Engine/source/: Application.cpp  AxisAlignedBoundingBox.cpp  Box.cpp  Camera.cpp  Color.cpp  Coordinate.cpp  Debug.cpp  Drawing.cpp  Effect.cpp  Error.cpp  Geometry.cpp  GlUtil.cpp  Identification.cpp  Image.cpp  Light.cpp  Line.cpp  Maths.cpp  Matrix.cpp  Mesh.cpp  OffscreenSurface.cpp  Plane.cpp  Position.cpp  Prop.cpp  Quaternion.cpp  Random.cpp  Range.cpp  Scene.cpp  Size.cpp  Text.cpp  Texture.cpp  Timer.cpp  Triangle.cpp  UpdateFrequency.cpp  Utils.cpp  Vector.cpp  Volume.cpp  Window.cpp  Xml.cpp  from_string.cpp
Tactics/Engine/unittests/: AI.cpp  Angles.cpp  AxisAlignedPlane.cpp  Bounds.cpp  Box.cpp  Bus.cpp  CMakeLists.txt  Callback.cpp  Color.cpp  Controls.cpp  Effect.cpp  FixedPoint.cpp  GTestGeometry.h  Geometry.cpp  Identification.cpp  Image.cpp  Json.cpp  Line.cpp  Logging.cpp  Math.cpp  Mesh.cpp  MutableTuple.cpp  OrientationTests.cpp  Plane.cpp  Position.cpp  Quaternion.cpp  Random.cpp  Range.cpp  Singleton.cpp  String.cpp  Texture.cpp  Timer.cpp  Transformation.cpp  Triangle.cpp  UpdateFrequency.cpp  Volume.cpp
Tactics/TacticsIII/: CMakeLists.txt  ReadMe.md  level.json  main.cpp
eul/: CMakeLists.txt  README.md  copy_counter.cpp  ct_state_machine.cpp  event.cpp  expectation.cpp  format.cpp  intrusive_list.cpp  profile.cpp  rt_state_machine.cpp
eul/include/: captor.hpp  copy_counter.hpp  ct_state_machine.hpp  event.hpp  expectation.hpp  format.hpp  identifier.hpp  intrusive_list.hpp  profile.hpp  rt_state_machine.hpp  signal.hpp  singleton.hpp  stack_span.hpp  timer_itf.hpp  type_id.hpp  variant.hpp
eul/unittests/: CMakeLists.txt  mock_timer.hpp  test_captor.cpp  test_copy_counter.cpp  test_ct_state_machine.cpp  test_expectation.cpp  test_float_format.cpp  test_list.cpp  test_profile.cpp  test_rt_state_machine.cpp  test_signal.cpp  test_singleton.cpp  test_stack_span.cpp  test_type_id.cpp  test_variant.cpp
(+1292 files in other folders)
